--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -96,11 +96,13 @@
   }
 
   #navbar {
-    background-color: #e8e8e8;
+    background-color: #41679B;
     border: 0;
     border-radius: 0;
     font-family: Open Sans, sans-serif;
     width: 100%;
+    top: 0;
+    position: absolute;
     
   }
 
